--- a/requirements.txt
+++ b/requirements.txt
@@ -18,4 +18,15 @@ librosa>=0.10.1
 protobuf>=3.20.0
 setuptools>=65.5.1
 wheel>=0.40.0
-pip>=23.0.1 
+pip>=23.0.1
+
+# Web框架
+Flask==2.3.3
+Werkzeug==2.3.7
+Jinja2==3.1.2
+MarkupSafe==2.1.3
+itsdangerous==2.1.2
+
+# 實用工具
+python-dotenv==1.0.0
+gunicorn==21.2.0 
